# ChangeLog for dev-java/slf4j
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> slf4j-1.7.5.ebuild,
  +metadata.xml:
  Add missing USE description and metadata.xml, Fix license
