@@ -1,1 +1,2 @@
+DIST slf4j-1.7.5-build-scripts.tar.bz2 3541 SHA256 0afbd5238ff1550a7afe826aaceec1040c2cbcd13a0781cd24af0f17dfa3438a SHA512 46ad9f796396976eac9fd08e7e591a515da962f91deff510f8813b8f5f310751955d4faa59455acbd7a7bd4f005adf57c190d009628244e998443dc0ba2eafd0 WHIRLPOOL 1839e117838776af1b634e8f3197978e8355170c7a60e79edeea133a77f8dfd6d835d800a4445e804f0e6205b364894783f595d45bb10ee38d55b6816decad4f
 DIST slf4j-1.7.5.tar.gz 2862186 SHA256 e83f1f22f22dabce0a78bd8191fb2d6fab71dc9dc4c8bfbd7939a87b1237c92e SHA512 2ef078f505b626273bd22fe683b4a2527ce2d97b345ffb8cd9f23e7375cb11588623e67e15de90ceacfa02689e40c59749f22e5e0b44b8a9fd7492d3f120d9d7 WHIRLPOOL 4a396c81b50b186d8e582f30331f7d0a21c85bb2cc293bdc8eff8a8bc49ae7382b6b37e1b3f585d0f14e716b1b889ac17ae1acdc03799b93180539e488170820
