@@ -14,6 +14,5 @@
     <flag name="log4j">log4j</flag>
     <flag name="nop">nop</flag>
     <flag name="jcl">jcl</flag>
-    <flag name="migrator">migrator</flag>
   </use>
 </pkgmetadata>
