@@ -2,7 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jun 2013; johann@j-schmitz.net metadata.xml, slf4j-1.7.5.ebuild:
+  Use a proper build system; install docs if requested
+
   11 Jun 2013; Justin Lecher <jlec@gentoo.org> slf4j-1.7.5.ebuild,
   +metadata.xml:
   Add missing USE description and metadata.xml, Fix license
-
